<resources>
    <string name="app_name">FitnessApp</string>
    <string name="exercise_select_textview">Выберите упражнение</string>
    <string name="exercise_1_name">Упражнение 1</string>
    <string name="exercise_2_name">Упражнение 2</string>
    <string name="exercise_3_name">Упражнение 3</string>
    <string name="try_count_textview">Колличество повторений</string>
    <string name="save_result_button">Сохранить результат</string>
    <string name="result_date_textview">Дата</string>
    <string name="result_count_textview">Колличество</string>
    <string name="exercise_description_value">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sagittis, odio et mollis gravida, dolor urna placerat ipsum, ut fermentum magna felis sed dui. Pellentesque suscipit tortor sodales libero pharetra, at tempus nisi sollicitudin. Nam in pulvinar nunc, gravida blandit metus. Quisque tristique nec odio ut dictum. Cras id egestas augue. Donec eleifend vitae est ac dignissim. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque mollis non libero ut auctor. Duis eu eros blandit, scelerisque nisl at, malesuada eros. Etiam eros sapien, consectetur id nulla sed, tempor scelerisque orci. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sagittis, odio et mollis gravida, dolor urna placerat ipsum, ut fermentum magna felis sed dui. Pellentesque suscipit tortor sodales libero pharetra, at tempus nisi sollicitudin. Nam in pulvinar nunc, gravida blandit metus. Quisque tristique nec odio ut dictum. Cras id egestas augue. Donec eleifend vitae est ac dignissim. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque mollis non libero ut auctor. Duis eu eros blandit, scelerisque nisl at, malesuada eros. Etiam eros sapien, consectetur id nulla sed, tempor scelerisque orci.</string>
    <string name="underConstructionMessage">В разработке. Жми Упражение 1</string>
    <string name="share_button">Поделиться</string>
    <string name="share_record_template">Упражнение: %1$s! Мой рекорд: %2$s, получил: %3$s</string>
</resources>
