<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="8dp">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ExerciseActivity">

    <TextView
        android:id="@+id/excercise_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_1_name"
        android:textSize="20sp"
        android:gravity="center"/>
    <ImageView
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_count_textview"/>
        <TextView
            android:id="@+id/try_count_textview"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"/>
    </LinearLayout>
    <SeekBar
        android:id="@+id/try_count_seekbar"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:min="0"
        android:max="100"/>
    <Button
        android:id="@+id/save_result"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_result_button"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/result_date_textview"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_date_textview"/>
        <TextView
            android:id="@+id/result_date_value"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/result_date_textview"
            android:text="0"/>
        <TextView
            android:id="@+id/result_count_textview"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/result_date_textview"
            android:text="@string/result_count_textview"/>
        <TextView
            android:id="@+id/result_count_value"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/result_count_textview"
            android:layout_below="@id/result_date_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"/>
        <Button
            android:id="@+id/shareResultButton"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:text="@string/share_button"/>
    </RelativeLayout>
    <TextView
        android:layout_marginTop="8dp"
        android:id="@+id/exercise_description_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_description_value"/>

</LinearLayout>
</ScrollView>